fix the navbar shifting

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -31,10 +31,9 @@ nav {
     text-align: center;
 }
 
-#main, #home {
+main, #home {
     overflow: hidden;
     margin: auto;
-    flex-direction: column;
     align-items: center;
     max-width: 850px;
     min-height: 100vh;
@@ -48,6 +47,7 @@ article > header {
 }
 
 #home {
+    flex-direction: column;
     justify-content: center;
     flex: auto;
     display: flex;
